# minimal-siri-clone

./: .gitignore  README.md  complete-voice-chatbot.py  pyproject.toml  step1_record_audio.py  step2_audio_to_text.py  step3_get_response.py  step4_text_to_speech.py  step5_complete-bot.py
tests/: test_get_response.py
